# ai-pipleines-course

./: .gitignore  README.md  requirements.txt
test/: INSTALL.md  README.md  check_huggingface_installation.py  pyproject.toml  qwen_simple.py  requirements.txt  simple_inference.py  test_pipeline.py
