[project]
name = "ai-pipleines-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ion Jaureguialzo Sarasola",email = "ion@jaureguialzo.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.52.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
